# colortext

./: CMakeLists.txt  LICENSE  README.md
include/: colortext.hpp
src/: colortext.cpp
